ieee logo color fix, removed news, mob menu color

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -682,7 +682,7 @@
 		padding:12px 15px !important;
 		line-height:22px;
 		color:#ffffff !important;
-		background:#ffb200;
+		background:#81226a;
 		text-align:left;
 		min-height:0px;
 		font-size:14px;
