removed unused CSS

--- a/css/style.css
+++ b/css/style.css
@@ -51,15 +51,14 @@ font-family: 'Ubuntu', sans-serif;
 */
 
 @import url('font-awesome.css');
-@import url('flaticon.css');
+/* @import url('flaticon.css'); */
 @import url('animate.css');
-@import url('owl.css');
-@import url('jquery.fancybox.min.css');
-@import url('hover.css');
-@import url('slick.css');
+/* @import url('owl.css'); */
+/* @import url('jquery.fancybox.min.css'); */
+/* @import url('hover.css'); */
+/* @import url('slick.css'); */
 @import url('jquery-ui.css');
-@import url('jquery.bootstrap-touchspin.css');
-@import url('../plugins/machinery-icons/style.css');
+/* @import url('jquery.bootstrap-touchspin.css'); */
 @import url('bootstrap-select.min.css');
 
 /*** 
