--- a/css/style.css
+++ b/css/style.css
@@ -1965,7 +1965,7 @@ color:#ffda15;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-color: #aec93d;
+    background-color: #fff;
 }
 
 .main-banner-content {
